0070-argocd/nginx-ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
    - host: grpc.ingress.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:         
              service:
                name: argocd-server
                port:
                  number: 8080 
                  # name: https              
  tls:
    - hosts:
        - grpc.ingress.local
      secretName: argocd-secret # do not change, this is provided by Argo CD
